--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-#Exercise04_TA.ipynb
+Exercise04_TA.ipynb
 Exercise04._TA_test.ipynb
